# DevCapsule

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
devcapsule/: __init__.py  cli.py  config.py  core.py  models.py  tui.py
devcapsule/collectors/: __init__.py  base.py  clipboard.py  environment.py  git.py  project.py  terminal.py
devcapsule/formatter/: __init__.py  markdown.py
devcapsule/ranking/: __init__.py  relevance.py
devcapsule/storage/: __init__.py  sqlite.py
packaging/debian/: Dockerfile  README.md  build-deb.sh
tests/: test_cli.py  test_formatter.py  test_git_collector.py  test_project_collector.py  test_storage.py
